新增web爬虫任务

--- a/7.数据采集/数据采集.md
+++ b/7.数据采集/数据采集.md
@@ -1,1 +1,13 @@
 # 数据采集
+任务说明：数据采集是大数据行业中数据来源的重要手段，常见的数据采集途径主要包括web数据采集，日志收集与物联网设备数据收集，其中web数据采集是成本最低，也是普通创业者最容易获取数据的手段。
+
+## 任务要求
+1. 能熟练使用http客户端工具访问web服务（curl、postman、httpie等）
+2. 使用编程语言实现自动化web访问并保存内容（推进使用pythonRequest）
+3. 使用专用web爬虫工具、框架实现web页面批量自动化下载（推荐使用python scrapy）
+4. 使用webdriver，完成自动化web访问并获取指定内容
+   
+## 考核说明
+考核方式：按指定要求完成数据采集工作
+1. 定时批量下载指定行业新闻资讯
+2. 批量爬取指定站点最新招聘信息
