数据清洗任务提交

--- a/8.数据清洗/数据清洗.md
+++ b/8.数据清洗/数据清洗.md
@@ -1,1 +1,16 @@
 # 数据清洗
+任务说明：大数据、数据挖掘、机器学习和可视化，从统计学家到软件开发人员，再到图形设计师，几乎所有的行业都在被大数据改变。在完成数据采集的训练任务后，我们能轻松的从互联网上大量获得各种数据，但这些采集下来的原始数据还不足以交到数据分析师手上。我们的各种数据分析工具与框架都需要更干净的数据，在正式应用于我们认为是数据科学的核心的算法和可视化之前，这些数据往往需要经过迁移、压缩、清洗、打散、分片、分块以及其他多种转换处理。
+
+## 任务要求
+1. 熟悉常见的数据格式、类型与编码
+2. 熟练使用正则表达式，能快速的匹配和处理文本
+3. 掌握XML语言的使用，能熟练的生成XML与解析XML
+4. 掌握至少一种HTML解析工具，能从HTML中提取指定的内容
+5. 能通过程序处理来自office文档中的指定数据（尤其是电子表格）
+6. 熟悉pdf数据文件，并能从pdf中提取指定数据与文本
+   
+## 考核说明
+考核方式：完成指定数据清洗任务，将数据清洗结果提交
+1. 提取出epub电子书中的图书信息与目录信息
+2. 将1本大体积的epub电子书拆分为两本电子书
+3. 从epub电子书中抽离示例代码
